[gd_scene load_steps=3 format=3 uid="uid://bskh1vm7i45nw"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/nodes/sub_nodes/call_node_argument.gd" id="1_mqq8d"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="2_h0t8n"]

[node name="CallNodeArgument" type="HBoxContainer"]
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_mqq8d")

[node name="ArgumentLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "ArgName"

[node name="ArgumentTextEdit" type="TextEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Default"
placeholder_text = "Type"
scroll_fit_content_height = true

[node name="VFlowContainer" type="VFlowContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ResetButton" type="Button" parent="VFlowContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_h0t8n")
flat = true

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="focus_exited" from="ArgumentTextEdit" to="." method="_on_any_argument_edit_focus_exited"]
[connection signal="text_changed" from="ArgumentTextEdit" to="." method="_on_argument_text_edit_text_changed"]
[connection signal="pressed" from="VFlowContainer/ResetButton" to="." method="_on_reset_button_pressed"]
